# code_for_life

./: .gitignore  README.RST  Untitled Diagram.drawio  pyproject.toml
1_file_and_dirs/find_content_files/: app.py  utils.py
1_file_and_dirs/find_virus/: app.py
1_file_and_dirs/hash_and_cash/: app.py  salary.csv
1_file_and_dirs/security_transaction/: app.py  text.txt
2_media_file/Image_conversion/: app.py
2_media_file/add_watermark/: app.py
2_media_file/set_audio_tags/: app.py
2_media_file/speech_recognition/: app.py
3_internet/downloads_from_youtube/: app.py
3_internet/parse_site/: app.py
3_internet/send_email/: app.py  utils.py
file_renamer/: file_renamer.py
web_app/insta_selenium_app/: insta_home_page.py  selenium_bot.py
