[tool.poetry]
name = "code_for_life"
version = "0.1.0"
description = ""
authors = ["Aleksan <Dev.aleksan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
openpyxl = "^3.0.9"
XlsxWriter = "^3.0.1"
xlrd3 = "^1.1.0"
Pillow = "^8.3.2"
pydub = "^0.25.1"
SpeechRecognition = "^3.8.1"
eyed3 = "^0.9.6"

[tool.poetry.dev-dependencies]
pytest = "*"
environs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
